--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MetroWayz - Your Lifestyle Services</title>
     <meta name="description" content="Book lifestyle services like car rentals, short-let accommodations, private chefs, and more with MetroWayz." />
