--- a/index.html
+++ b/index.html
@@ -26,8 +26,18 @@
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
-
-
+  <script type="text/javascript">
+    var Tawk_API = Tawk_API || {}, Tawk_LoadStart = new Date();
+    Tawk_API.embedded = 'tawk_69798810324aa2197d408eeb';
+    (function () {
+      var s1 = document.createElement("script"), s0 = document.getElementsByTagName("script")[0];
+      s1.async = true;
+      s1.src = 'https://embed.tawk.to/69798810324aa2197d408eeb/1jg1e88eo';
+      s1.charset = 'UTF-8';
+      s1.setAttribute('crossorigin', '*');
+      s0.parentNode.insertBefore(s1, s0);
+    })();
+  </script>
 </body>
 
 </html>
