--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     content="Book lifestyle services like car rentals, short-let accommodations, private chefs, and more with MetroWayz." />
 
   <!-- Security Headers -->
+  <meta http-equiv="Content-Security-Policy"
+    content="default-src 'self'; script-src 'self' 'unsafe-inline' https://embed.tawk.to https://*.tawk.to https://js.paystack.co https://www.google.com https://accounts.google.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com https://*.tawk.to; font-src 'self' https://fonts.gstatic.com https://*.tawk.to data:; img-src 'self' data: https: blob:; connect-src 'self' https://*.tawk.to wss://*.tawk.to https://api.paystack.co https://accounts.google.com https://www.google.com; frame-src 'self' https://*.tawk.to https://js.paystack.co https://checkout.paystack.com https://accounts.google.com; object-src 'none';">
   <meta http-equiv="X-Content-Type-Options" content="nosniff" />
   <meta http-equiv="X-XSS-Protection" content="1; mode=block" />
   <meta name="referrer" content="strict-origin-when-cross-origin" />
